--- a/order/index.html
+++ b/order/index.html
@@ -192,7 +192,7 @@
       <div class="card muted">
         <p>
           💬 Need help?
-          <a href="https://stonegrillresto.net/order/howto" id="howtoOrder">How to Order</a>
+          <a href="howto.html" id="howtoOrder">How to Order</a>
           or message us on Facebook / call
           <a href="tel:0535680539">053 568 0539</a>.
         </p>
