--- a/order/index.html
+++ b/order/index.html
@@ -251,7 +251,7 @@
 
       <!-- Standalone uploader that posts to Telegram via hidden iframe (no CORS, no Apps Script) -->
       <div class="receipt-upload-block">
-        <h4>Upload Payment Receipt</h4>
+        <h3>Upload Gcash Receipt here</h3>
 
         <!-- Hidden iframe prevents navigation -->
         <iframe name="tgUploadFrame" id="tgUploadFrame" class="hidden" style="display:none"></iframe>
