--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -58,7 +58,7 @@
     <h2>8. Contact Us</h2>
     <p>
       Stone Grill Restaurant<br>
-      Hilongos, Leyte, Philippines<br>
+      Bato, Leyte, Philippines<br>
       Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a><br>
       Phone: +63 53 568 0539
     </p>
