--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,71 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy Policy — Stone Grill Restaurant</title>
-  <meta name="robots" content="index, follow">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy | Stone Grill Restaurant</title>
   <style>
-    body{font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin:0; padding:0; color:#222; line-height:1.6;}
-    .container{max-width:840px; margin:0 auto; padding:40px 20px;}
-    h1{font-size:2rem; margin-bottom:0.5rem;}
-    h2{margin-top:2rem;}
-    p, li{font-size:1rem;}
-    .muted{color:#666; font-size:0.95rem;}
-    footer{margin-top:3rem; padding-top:1rem; border-top:1px solid #eee; color:#555; font-size:0.9rem;}
-    a{color:#0a62ff; text-decoration:none;} a:hover{text-decoration:underline;}
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #d35400;
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Privacy Policy</h1>
-    <p class="muted">Effective Date: August 15, 2025</p>
 
-    <p>Stone Grill Restaurant (“Stone Grill”, “we”, “our”, “us”) values your privacy. This Privacy Policy explains how we collect, use, and protect information when you interact with us online or offline, including at <strong>stonegrillresto.net</strong> and our official social media pages.</p>
+  <h1>Privacy Policy</h1>
+  <p><strong>Effective Date:</strong> August 15, 2025</p>
 
-    <h2>1. Information We Collect</h2>
-    <ul>
-      <li>Contact details you provide (name, phone number, email) when placing orders, inquiries, or reservations.</li>
-      <li>Order details (items ordered, amounts, date/time).</li>
-      <li>Usage data from analytics and advertising tools (e.g., Meta Pixel, which may collect device and browsing information).</li>
-    </ul>
+  <p>Stone Grill Restaurant (“we,” “our,” or “us”) values your privacy. This Privacy Policy explains how we collect, use, and protect your personal information when you visit our website <a href="https://stonegrillresto.net">stonegrillresto.net</a> or use our online ordering services.</p>
 
-    <h2>2. How We Use Information</h2>
-    <ul>
-      <li>To process orders and provide customer support.</li>
-      <li>To improve our website, menu, and services.</li>
-      <li>To measure advertising performance and reach people likely to enjoy our products.</li>
-    </ul>
+  <h2>Information We Collect</h2>
+  <ul>
+    <li><strong>Personal Information:</strong> Name, email, phone number, and address when you place an order or make a reservation.</li>
+    <li><strong>Order Information:</strong> Details of your order, special requests, and payment information (if applicable).</li>
+    <li><strong>Technical Information:</strong> IP address, browser type, device type, and pages visited.</li>
+  </ul>
 
-    <h2>3. Sharing of Information</h2>
-    <ul>
-      <li>We do <strong>not</strong> sell personal information.</li>
-      <li>We may share limited data with service providers (e.g., payment processors, analytics/advertising platforms like Meta) solely to deliver our services.</li>
-    </ul>
+  <h2>How We Use Your Information</h2>
+  <ul>
+    <li>To process and confirm your orders or reservations.</li>
+    <li>To communicate with you regarding your orders or inquiries.</li>
+    <li>To improve our website and services.</li>
+    <li>To comply with legal obligations.</li>
+  </ul>
 
-    <h2>4. Data Retention</h2>
-    <p>We retain data only as long as necessary for business operations, legal, tax, or accounting requirements. Platform data stored with partners (e.g., Meta) follows their retention policies.</p>
+  <h2>Data Sharing</h2>
+  <p>We do not sell or rent your personal data. We may share information with trusted service providers for payment processing, delivery, or marketing—only as necessary.</p>
 
-    <h2>5. Your Choices & Rights</h2>
-    <p>You may request to access, update, or delete your personal information. Send your request using the contact details below.</p>
+  <h2>Cookies & Tracking</h2>
+  <p>Our website uses cookies and tracking tools (such as Meta Pixel and Google Analytics) to improve your browsing experience and understand customer preferences.</p>
 
-    <h2>6. Security</h2>
-    <p>We use reasonable technical and organizational measures to protect information. No method of transmission or storage is 100% secure.</p>
+  <h2>Data Security</h2>
+  <p>We implement reasonable security measures to protect your information from unauthorized access or disclosure.</p>
 
-    <h2>7. Updates to this Policy</h2>
-    <p>We may update this Policy from time to time. Changes take effect upon posting on this page.</p>
+  <h2>Your Rights</h2>
+  <p>You may request access, correction, or deletion of your personal data by contacting us directly.</p>
 
-    <h2>8. Contact Us</h2>
-    <p>
-      Stone Grill Restaurant<br>
-      Bato, Leyte, Philippines<br>
-      Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a><br>
-      Phone: +63 53 568 0539
-    </p>
+  <h2>Contact Us</h2>
+  <p>
+    <strong>Stone Grill Restaurant</strong><br>
+    Poblacion, Bato, Leyte, Philippines<br>
+    Phone: <a href="tel:+63535680539">+63 53 568 0539</a><br>
+    Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>
+  </p>
 
-    <footer>
-      © 2025 Stone Grill Restaurant — <a href="/">Home</a>
-    </footer>
-  </div>
+  <p>If you have concerns about this Privacy Policy or how we handle your data, please contact us through the above channels.</p>
+
 </body>
 </html>
