--- a/index.html
+++ b/index.html
@@ -12,28 +12,24 @@
   <meta name="author" content="Ninox Antolihao">
   <!-- ADDED: canonical -->
   <link rel="canonical" href="https://stonegrillresto.net/">
-
-  <!-- Open Graph (de-duplicated into one clean block) -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://stonegrillresto.net/">
-  <meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
-  <meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
-  <!-- IMPORTANT: point to a real 1200×630 JPG/PNG <300KB -->
-  <meta property="og:image:type" content="image/jpeg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <!-- Optional: <meta property="fb:app_id" content="YOUR_APP_ID"> -->
   <!-- Twitter Card (added) -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
   <meta name="twitter:description" content="Sizzling plates, seafood boodle, and Filipino favorites.">
   <meta name="twitter:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
 
-  <!-- Open Graph -->
-<meta property="og:title" content="Stone Grill Restaurant — Sizzling Plates & Seafood in Bato, Leyte">
-<meta property="og:description" content="Enjoyable & Relaxing. Sizzling favorites, fresh seafood, and Filipino classics. Order online at Stone Grill.">
-<meta property="og:url" content="https://stonegrillresto.net/">
+<!-- Open Graph (one clean block only) -->
 <meta property="og:type" content="website">
+<meta property="og:url" content="https://stonegrillresto.net/">
+<meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+<meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
+<meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
+<meta property="og:site_name" content="Stone Grill Restaurant">
+<meta property="og:locale" content="en_PH">
 
 <!-- REQUIRED image -->
 <meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
