--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,6 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy | Stone Grill Restaurant</title>
+  <!-- ===== OPTIMIZED HEAD (kept features, cleaned OG, preload) ===== -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Title & SEO (kept) -->
+  <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
+  <meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
+  <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, Filipino food, family dining, restobar Leyte, grill restaurant">
+  <meta name="author" content="Ninox Antolihao">
+  <!-- ADDED: canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/">
+  <!-- Twitter Card (added) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+  <meta name="twitter:description" content="Sizzling plates, seafood boodle, and Filipino favorites.">
+  <meta name="twitter:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
+
+<!-- Open Graph (one clean block only) -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://stonegrillresto.net/">
+<meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+<meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
+<meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
+<meta property="og:site_name" content="Stone Grill Restaurant">
+<meta property="og:locale" content="en_PH">
+
+<!-- REQUIRED image -->
+<meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
+
+<!-- Optional but nice-to-have -->
+<meta property="og:site_name" content="Stone Grill Restaurant">
+<meta property="og:locale" content="en_PH">
+
+
+  <!-- Icons & PWA (kept) -->
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#b22222">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="StoneGrill">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+
+  <!-- Fonts (kept) -->
   <style>
     body {
       font-family: Arial, sans-serif;
