--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,126 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Privacy Policy — Stone Grill Restaurant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy | Stone Grill Restaurant</title>
-  <!-- ===== OPTIMIZED HEAD (kept features, cleaned OG, preload) ===== -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Title & SEO (kept) -->
-  <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
-  <meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
-  <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, Filipino food, family dining, restobar Leyte, grill restaurant">
-  <meta name="author" content="Ninox Antolihao">
-  <!-- ADDED: canonical -->
-  <link rel="canonical" href="https://stonegrillresto.net/">
-  <!-- Twitter Card (added) -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
-  <meta name="twitter:description" content="Sizzling plates, seafood boodle, and Filipino favorites.">
-  <meta name="twitter:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
-
-<!-- Open Graph (one clean block only) -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://stonegrillresto.net/">
-<meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
-<meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
-<meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
-<meta property="og:image:type" content="image/jpeg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
-<meta property="og:site_name" content="Stone Grill Restaurant">
-<meta property="og:locale" content="en_PH">
-
-<!-- REQUIRED image -->
-<meta property="og:image" content="https://stonegrillresto.net/assets/og/stonegrill-hero-1200x630.jpg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:image:alt" content="Stone Grill sizzling plates and seafood spread">
-
-<!-- Optional but nice-to-have -->
-<meta property="og:site_name" content="Stone Grill Restaurant">
-<meta property="og:locale" content="en_PH">
-
-
-  <!-- Icons & PWA (kept) -->
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#b22222">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="StoneGrill">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon180x180.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-
-  <!-- Fonts (kept) -->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-      background: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      color: #d35400;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <meta name="robots" content="index,follow">
 </head>
 <body>
-
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> August 15, 2025</p>
+  <p><strong>Effective Date:</strong> August 18, 2025</p>
 
-  <p>Stone Grill Restaurant (“we,” “our,” or “us”) values your privacy. This Privacy Policy explains how we collect, use, and protect your personal information when you visit our website <a href="https://stonegrillresto.net">stonegrillresto.net</a> or use our online ordering services.</p>
+  <p>Stone Grill Restaurant (“Stone Grill”, “we”, “our”, “us”) values your privacy. This policy explains how we collect, use, share, and protect personal information when you use our website, online ordering, and connected messaging experiences (including Messenger).</p>
 
-  <h2>Information We Collect</h2>
+  <h2>1) Who we are</h2>
+  <p>Stone Grill Restaurant, Poblacion, Bato, Leyte, Philippines. Phone: +63 53 568 0539 • Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+
+  <h2>2) Scope</h2>
+  <p>This policy covers our website <a href="https://stonegrillresto.net/">stonegrillresto.net</a>, our online order form, and our Meta app (<strong>App MOB Profie</strong>) used for Messenger or Facebook integrations.</p>
+
+  <h2>3) Information we collect</h2>
   <ul>
-    <li><strong>Personal Information:</strong> Name, email, phone number, and address when you place an order or make a reservation.</li>
-    <li><strong>Order Information:</strong> Details of your order, special requests, and payment information (if applicable).</li>
-    <li><strong>Technical Information:</strong> IP address, browser type, device type, and pages visited.</li>
+    <li><strong>Identity & Contact:</strong> name, email, phone, address.</li>
+    <li><strong>Order/Reservation Details:</strong> items, date/time, party size, special requests.</li>
+    <li><strong>Technical:</strong> IP, device/browser info, pages viewed.</li>
+    <li><strong>Payment:</strong> limited details you provide (we do not store full card data on our servers).</li>
   </ul>
 
-  <h2>How We Use Your Information</h2>
+  <h3>Meta Platform Data (Messenger/Login)</h3>
+  <p>If you interact via Facebook Login, Pages, or Messenger, we may receive basic profile and messaging metadata permitted by you and by the app’s approved permissions (e.g., Page-scoped ID, message content you send to us). We use this data solely to provide requested features such as responding to inquiries, confirming orders/reservations, or support. We do not sell Meta Platform Data, and we use it only in accordance with Meta’s terms and our stated purposes.</p>
+
+  <h2>4) How we use information</h2>
   <ul>
-    <li>To process and confirm your orders or reservations.</li>
-    <li>To communicate with you regarding your orders or inquiries.</li>
-    <li>To improve our website and services.</li>
-    <li>To comply with legal obligations.</li>
+    <li>Process and confirm orders or reservations; provide customer support.</li>
+    <li>Send updates related to your order/reservation or service changes.</li>
+    <li>Improve our website and offerings, prevent fraud and misuse.</li>
+    <li>Comply with legal obligations.</li>
   </ul>
 
-  <h2>Data Sharing</h2>
-  <p>We do not sell or rent your personal data. We may share information with trusted service providers for payment processing, delivery, or marketing—only as necessary.</p>
+  <h2>5) Cookies & analytics</h2>
+  <p>We use cookies and tracking tools (e.g., <strong>Meta Pixel</strong>, <strong>Google Analytics</strong>) to measure usage and improve performance. You can control cookies via your browser settings. Some features may rely on cookies to function. </p>
 
-  <h2>Cookies & Tracking</h2>
-  <p>Our website uses cookies and tracking tools (such as Meta Pixel and Google Analytics) to improve your browsing experience and understand customer preferences.</p>
+  <h2>6) Sharing</h2>
+  <p>We do <strong>not</strong> sell personal data. We share limited data with service providers who help us operate (e.g., website hosting, messaging/notification tools such as Telegram/ManyChat, analytics, and payment/fulfillment partners). These providers may process data on our behalf under confidentiality and security obligations.</p>
 
-  <h2>Data Security</h2>
-  <p>We implement reasonable security measures to protect your information from unauthorized access or disclosure.</p>
+  <h2>7) International transfers</h2>
+  <p>Your information may be processed outside the Philippines by our service providers. We take steps to ensure appropriate protections are in place.</p>
 
-  <h2>Your Rights</h2>
-  <p>You may request access, correction, or deletion of your personal data by contacting us directly.</p>
+  <h2>8) Retention</h2>
+  <p>Order/reservation records are kept only as long as needed for operations, accounting, or legal requirements. Routine customer messages are retained for up to 24 months unless you request earlier deletion or a longer period is required by law.</p>
 
-  <h2>Contact Us</h2>
-  <p>
-    <strong>Stone Grill Restaurant</strong><br>
-    Poblacion, Bato, Leyte, Philippines<br>
-    Phone: <a href="tel:+63535680539">+63 53 568 0539</a><br>
-    Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>
-  </p>
+  <h2>9) Your rights</h2>
+  <p>You may request access, correction, or deletion of your data at any time by emailing <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>. You can also remove our app’s access in your Facebook settings; we will honor any resulting deletion request we receive from Meta.</p>
 
-  <p>If you have concerns about this Privacy Policy or how we handle your data, please contact us through the above channels.</p>
+  <h2>10) Security</h2>
+  <p>We use reasonable technical and organizational safeguards to protect information. No method of transmission or storage is 100% secure.</p>
 
+  <h2>11) Children’s privacy</h2>
+  <p>Our services are not directed to children under 13, and we do not knowingly collect their data.</p>
+
+  <h2>12) How to request deletion</h2>
+  <p>See our <a href="/data-deletion.html">Meta User Data Deletion</a> page for step-by-step instructions. You can also email us at <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>.</p>
+
+  <h2>13) Changes to this policy</h2>
+  <p>We may update this policy from time to time. We will post the latest version here with the updated date.</p>
+
+  <h2>14) Contact</h2>
+  <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines • +63 53 568 0539 • <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
 </body>
 </html>
