--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -40,31 +40,42 @@
   <h2>5) Cookies & analytics</h2>
   <p>We use cookies and tracking tools (e.g., <strong>Meta Pixel</strong>, <strong>Google Analytics</strong>) to measure usage and improve performance. You can control cookies via your browser settings. Some features may rely on cookies to function. </p>
 
-  <h2>6) Sharing</h2>
-  <p>We do <strong>not</strong> sell personal data. We share limited data with service providers who help us operate (e.g., website hosting, messaging/notification tools such as Telegram/ManyChat, analytics, and payment/fulfillment partners). These providers may process data on our behalf under confidentiality and security obligations.</p>
+  <h2>6) Data Sharing</h2>
+  <p>We do <strong>not</strong> sell personal data. We share limited data with service providers who help us operate (e.g., website hosting, messaging/notification tools, analytics, and payment partners). These providers may process data on our behalf under confidentiality and security obligations.</p>
 
-  <h2>7) International transfers</h2>
+  <h2>7) Service Providers (Data Processors)</h2>
+  <p>We may share limited personal data with trusted third-party service providers who process data on our behalf and only as necessary to deliver our services. These include:</p>
+  <ul>
+    <li><strong>Web Hosting:</strong> GitHub Pages (hosts our website and ordering system).</li>
+    <li><strong>Messaging & Notifications:</strong> Telegram (order notifications to our staff group), ManyChat (Messenger automation).</li>
+    <li><strong>Analytics:</strong> Google Analytics (anonymous usage statistics).</li>
+    <li><strong>Payment Processing:</strong> GCash (through QR code payments; we do not store card/account details).</li>
+    <li><strong>Meta Platforms:</strong> Facebook, Messenger, and Instagram, to provide login and messaging features.</li>
+  </ul>
+  <p>Each provider is bound by contractual obligations to protect your information and use it only for the services we request.</p>
+
+  <h2>8) International transfers</h2>
   <p>Your information may be processed outside the Philippines by our service providers. We take steps to ensure appropriate protections are in place.</p>
 
-  <h2>8) Retention</h2>
+  <h2>9) Retention</h2>
   <p>Order/reservation records are kept only as long as needed for operations, accounting, or legal requirements. Routine customer messages are retained for up to 24 months unless you request earlier deletion or a longer period is required by law.</p>
 
-  <h2>9) Your rights</h2>
+  <h2>10) Your rights</h2>
   <p>You may request access, correction, or deletion of your data at any time by emailing <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>. You can also remove our app’s access in your Facebook settings; we will honor any resulting deletion request we receive from Meta.</p>
 
-  <h2>10) Security</h2>
+  <h2>11) Security</h2>
   <p>We use reasonable technical and organizational safeguards to protect information. No method of transmission or storage is 100% secure.</p>
 
-  <h2>11) Children’s privacy</h2>
+  <h2>12) Children’s privacy</h2>
   <p>Our services are not directed to children under 13, and we do not knowingly collect their data.</p>
 
-  <h2>12) How to request deletion</h2>
+  <h2>13) How to request deletion</h2>
   <p>See our <a href="/data-deletion.html">Meta User Data Deletion</a> page for step-by-step instructions. You can also email us at <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>.</p>
 
-  <h2>13) Changes to this policy</h2>
+  <h2>14) Changes to this policy</h2>
   <p>We may update this policy from time to time. We will post the latest version here with the updated date.</p>
 
-  <h2>14) Contact</h2>
+  <h2>15) Contact</h2>
   <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines • +63 53 568 0539 • <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
 </body>
 </html>
