--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -77,5 +77,14 @@
 
   <h2>15) Contact</h2>
   <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines • +63 53 568 0539 • <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+
+  <footer style="text-align:center; padding:16px; font-size:0.9em; color:#555; background:#f9f9f9;">
+  <p>
+    © 2025 Stone Grill Restaurant • 
+    <a href="/privacy-policy.html">Privacy Policy</a> • 
+    <a href="/data-deletion.html">Data Deletion</a>
+  </p>
+</footer>
+
 </body>
 </html>
