--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,24 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
   <!-- Facebook SDK (kept) -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
+  
+<footer style="
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  font-size: 0.9em;
+  color: #555;
+  background: #f9f9f9;
+  border-top: 1px solid #ddd;
+  z-index: 1000;
+">
+  © 2025 Stone Grill Restaurant • 
+  <a href="/privacy-policy.html" style="color:#333; text-decoration:none; margin:0 6px;">Privacy Policy</a> • 
+  <a href="/data-deletion.html" style="color:#333; text-decoration:none; margin:0 6px;">Data Deletion</a>
+</footer>
 
   <!-- ADDED: Lazy-load helper (adds lazy+async to all non-critical imgs) -->
   <script>
