--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,89 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy — Stone Grill Restaurant</title>
+  <title>Meta User Data Deletion — Stone Grill Restaurant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index,follow">
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; padding: 24px; max-width: 900px; margin: auto; color: #222; }
+    h1, h2 { margin: 0.6em 0 0.3em; }
+    .card { border: 1px solid #eee; border-radius: 12px; padding: 16px 18px; margin: 14px 0; background: #fafafa; }
+    a.button { display: inline-block; padding: 10px 14px; border-radius: 8px; text-decoration: none; border: 1px solid #ddd; }
+    .muted { color: #666; font-size: 0.95em; }
+    ul { margin: 0.4em 0 0.8em 1.2em; }
+    li { margin: 0.2em 0; }
+    code { background: #f1f1f1; padding: 0 4px; border-radius: 4px; }
+  </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> August 18, 2025</p>
+  <h1>Meta User Data Deletion</h1>
+  <p class="muted"><strong>Effective Date:</strong> August 18, 2025</p>
 
-  <p>Stone Grill Restaurant (“Stone Grill”, “we”, “our”, “us”) values your privacy. This policy explains how we collect, use, share, and protect personal information when you use our website, online ordering, and connected messaging experiences (including Messenger).</p>
+  <p>This page explains how to request deletion of personal data we hold that is connected to Facebook, Instagram, or Messenger (“Meta Platform Data”), as well as data you provided through our website or online ordering.</p>
 
-  <h2>1) Who we are</h2>
-  <p>Stone Grill Restaurant, Poblacion, Bato, Leyte, Philippines. Phone: +63 53 568 0539 • Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+  <div class="card">
+    <h2>How to Request Deletion</h2>
+    <ol>
+      <li>Email us at <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a> with the subject line: <em>“Meta Data Deletion Request”</em>.</li>
+      <li>Include:
+        <ul>
+          <li>The Page you interacted with: <strong>Stone Grill Restaurant</strong></li>
+          <li>Your Messenger profile name (or the link to your FB profile), and any contact info you used with us (email or phone)</li>
+          <li>Approximate dates of your conversation/order</li>
+        </ul>
+      </li>
+      <li>We will verify your identity and delete associated records from our systems within <strong>30 days</strong>, then confirm by email.</li>
+    </ol>
+    <p><a class="button" href="mailto:stonegrill2014@gmail.com?subject=Meta%20Data%20Deletion%20Request">Start deletion request via email</a></p>
+  </div>
 
-  <h2>2) Scope</h2>
-  <p>This policy covers our website <a href="https://stonegrillresto.net/">stonegrillresto.net</a>, our online order form, and our Meta app (<strong>App MOB Profie</strong>) used for Messenger or Facebook integrations.</p>
+  <div class="card">
+    <h2>Delete Access via Facebook Settings (Optional)</h2>
+    <p>You can also remove our app’s access in your Facebook Account Settings. When Meta notifies us of your removal/deletion, we will delete corresponding records we hold.</p>
+  </div>
 
-  <h2>3) Information we collect</h2>
+  <h2>What We Delete</h2>
   <ul>
-    <li><strong>Identity & Contact:</strong> name, email, phone, address.</li>
-    <li><strong>Order/Reservation Details:</strong> items, date/time, party size, special requests.</li>
-    <li><strong>Technical:</strong> IP, device/browser info, pages viewed.</li>
-    <li><strong>Payment:</strong> limited details you provide (we do not store full card data on our servers).</li>
+    <li>Contact details you provided to us (name, phone, email)</li>
+    <li>Order/reservation records and special requests stored on our systems</li>
+    <li>Messages and message metadata we store outside of Meta systems (if any)</li>
   </ul>
 
-  <h3>Meta Platform Data (Messenger/Login)</h3>
-  <p>If you interact via Facebook Login, Pages, or Messenger, we may receive basic profile and messaging metadata permitted by you and by the app’s approved permissions (e.g., Page-scoped ID, message content you send to us). We use this data solely to provide requested features such as responding to inquiries, confirming orders/reservations, or support. We do not sell Meta Platform Data, and we use it only in accordance with Meta’s terms and our stated purposes.</p>
+  <h2>What We May Retain (Limited)</h2>
+  <p>We may retain certain information if required for legal, accounting, fraud prevention, or dispute-resolution purposes. If retention applies, we will minimize the data and keep it only as long as necessary.</p>
 
-  <h2>4) How we use information</h2>
-  <ul>
-    <li>Process and confirm orders or reservations; provide customer support.</li>
-    <li>Send updates related to your order/reservation or service changes.</li>
-    <li>Improve our website and offerings, prevent fraud and misuse.</li>
-    <li>Comply with legal obligations.</li>
-  </ul>
-
-  <h2>5) Cookies & analytics</h2>
-  <p>We use cookies and tracking tools (e.g., <strong>Meta Pixel</strong>, <strong>Google Analytics</strong>) to measure usage and improve performance. You can control cookies via your browser settings. Some features may rely on cookies to function. </p>
-
-  <h2>6) Data Sharing</h2>
-  <p>We do <strong>not</strong> sell personal data. We share limited data with service providers who help us operate (e.g., website hosting, messaging/notification tools, analytics, and payment partners). These providers may process data on our behalf under confidentiality and security obligations.</p>
-
-  <h2>7) Service Providers (Data Processors)</h2>
-  <p>We may share limited personal data with trusted third-party service providers who process data on our behalf and only as necessary to deliver our services. These include:</p>
-  <ul>
-    <li><strong>Web Hosting:</strong> GitHub Pages (hosts our website and ordering system).</li>
-    <li><strong>Messaging & Notifications:</strong> Telegram (order notifications to our staff group), ManyChat (Messenger automation).</li>
-    <li><strong>Analytics:</strong> Google Analytics (anonymous usage statistics).</li>
-    <li><strong>Payment Processing:</strong> GCash (through QR code payments; we do not store card/account details).</li>
-    <li><strong>Meta Platforms:</strong> Facebook, Messenger, and Instagram, to provide login and messaging features.</li>
-  </ul>
-  <p>Each provider is bound by contractual obligations to protect your information and use it only for the services we request.</p>
-
-  <h2>8) International transfers</h2>
-  <p>Your information may be processed outside the Philippines by our service providers. We take steps to ensure appropriate protections are in place.</p>
-
-  <h2>9) Retention</h2>
-  <p>Order/reservation records are kept only as long as needed for operations, accounting, or legal requirements. Routine customer messages are retained for up to 24 months unless you request earlier deletion or a longer period is required by law.</p>
-
-  <h2>10) Your rights</h2>
-  <p>You may request access, correction, or deletion of your data at any time by emailing <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>. You can also remove our app’s access in your Facebook settings; we will honor any resulting deletion request we receive from Meta.</p>
-
-  <h2>11) Security</h2>
-  <p>We use reasonable technical and organizational safeguards to protect information. No method of transmission or storage is 100% secure.</p>
-
-  <h2>12) Children’s privacy</h2>
-  <p>Our services are not directed to children under 13, and we do not knowingly collect their data.</p>
-
-  <h2>13) How to request deletion</h2>
-  <p>See our <a href="/data-deletion.html">Meta User Data Deletion</a> page for step-by-step instructions. You can also email us at <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>.</p>
-
-  <h2>14) Changes to this policy</h2>
-  <p>We may update this policy from time to time. We will post the latest version here with the updated date.</p>
-
-  <h2>15) Contact</h2>
-  <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines • +63 53 568 0539 • <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
-
-  <footer style="text-align:center; padding:16px; font-size:0.9em; color:#555; background:#f9f9f9;">
-  <p>
-    © 2025 Stone Grill Restaurant • 
-    <a href="/privacy-policy.html">Privacy Policy</a> • 
-    <a href="/data-deletion.html">Data Deletion</a>
+  <h2>Scope</h2>
+  <p>This process covers data we control for:
+    <ul>
+      <li><strong>Website & Online Ordering:</strong> <a href="https://stonegrillresto.net/">stonegrillresto.net</a></li>
+      <li><strong>Messenger/Facebook/Instagram interactions</strong> made through our app <em>MOB Profie</em> or our Page</li>
+    </ul>
   </p>
-</footer>
 
+  <h2>Verification</h2>
+  <p>To protect your privacy, we verify deletion requests by matching details you provide (e.g., profile name, message timestamps, order info) with our records.</p>
+
+  <h2>Third-Party Services</h2>
+  <p>We use trusted service providers (data processors) to operate our services (e.g., hosting, messaging/alerts, analytics, and payments). When we delete your data, we also instruct these providers to delete related records they process on our behalf where applicable.</p>
+
+  <h2>Contact</h2>
+  <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines<br>
+     Phone: +63 53 568 0539 • Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+
+  <p class="muted">For details on how we collect and use data, see our <a href="/privacy-policy.html">Privacy Policy</a>.</p>
 </body>
 </html>
