--- a/order/index.html
+++ b/order/index.html
@@ -269,6 +269,42 @@
       </div>
     </div>
   </div>
+  <!-- === SG Privacy/Data Notice (BEGIN) === -->
+<!-- Floating button -->
+<button id="sg-privacy-fab" aria-haspopup="dialog" aria-controls="sg-privacy-modal" aria-label="Privacy & Data">
+  Privacy • Data
+</button>
+
+<!-- Compact modal -->
+<div id="sg-privacy-modal" role="dialog" aria-modal="true" aria-labelledby="sg-privacy-title" hidden>
+  <div class="sg-privacy-modal__panel">
+    <header class="sg-privacy-modal__hdr">
+      <h3 id="sg-privacy-title">Your privacy matters</h3>
+      <button class="sg-privacy-modal__close" aria-label="Close">×</button>
+    </header>
+    <div class="sg-privacy-modal__content">
+      <p>Review how we handle your info:</p>
+      <p>
+        <a href="/privacy-policy.html" target="_blank" rel="noopener">Privacy Policy</a> •
+        <a href="/data-deletion.html" target="_blank" rel="noopener">Data Deletion</a>
+      </p>
+    </div>
+  </div>
+  <div class="sg-privacy-modal__backdrop" aria-hidden="true"></div>
+</div>
+
+<!-- First-visit toast -->
+<div id="sg-privacy-toast" hidden role="status" aria-live="polite">
+  <div class="sg-privacy-toast__card">
+    <span>We value your privacy. Read our</span>
+    <a href="/privacy-policy.html" target="_blank" rel="noopener">Policy</a>
+    <span>and</span>
+    <a href="/data-deletion.html" target="_blank" rel="noopener">Deletion</a>.
+    <button class="sg-privacy-toast__close" aria-label="Dismiss">×</button>
+  </div>
+</div>
+<!-- === SG Privacy/Data Notice (END) === -->
+
 
   <!-- Toast -->
   <div id="toast" class="toast hidden"></div>
@@ -462,6 +498,5 @@
   };
 })();
 </script>
-<!-- ===== /Toast upgrade ===== -->
 </body>
 </html>
