--- a/order/index.html
+++ b/order/index.html
@@ -90,6 +90,56 @@
       border-radius: 12px;
       box-shadow: 0 10px 20px rgba(0,0,0,.15);
     }
+    /* === SG Privacy/Data Notice (BEGIN) === */
+#sg-privacy-fab{
+  position:fixed; right:12px; bottom:12px; z-index:2147483647;
+  padding:10px 12px; border:1px solid #ddd; background:#ffffff; color:#333;
+  border-radius:999px; font-size:.9rem; box-shadow:0 2px 10px rgba(0,0,0,.08);
+}
+#sg-privacy-fab:hover{ background:#f7f7f7; }
+
+#sg-privacy-modal[hidden]{ display:none; }
+#sg-privacy-modal{ position:fixed; inset:0; z-index:2147483646; }
+#sg-privacy-modal .sg-privacy-modal__backdrop{
+  position:absolute; inset:0; background:rgba(0,0,0,.45);
+}
+#sg-privacy-modal .sg-privacy-modal__panel{
+  position:absolute; right:12px; bottom:64px; width:min(95vw, 360px);
+  background:#fff; border:1px solid #e6e6e6; border-radius:14px;
+  box-shadow:0 10px 30px rgba(0,0,0,.18); overflow:hidden;
+}
+.sg-privacy-modal__hdr{
+  display:flex; align-items:center; justify-content:space-between;
+  padding:10px 12px; background:#f8f8f8; border-bottom:1px solid #eee;
+}
+.sg-privacy-modal__hdr h3{ margin:0; font-size:1rem; }
+.sg-privacy-modal__close{
+  border:0; background:transparent; font-size:1.2rem; line-height:1; cursor:pointer; color:#555;
+}
+.sg-privacy-modal__content{ padding:12px; font-size:.95rem; line-height:1.5; }
+.sg-privacy-modal__content a{ color:#333; text-decoration:underline; }
+
+#sg-privacy-toast[hidden]{ display:none; }
+#sg-privacy-toast{
+  position:fixed; left:50%; transform:translateX(-50%);
+  bottom:80px; z-index:2147483645; max-width:min(92vw, 520px);
+}
+.sg-privacy-toast__card{
+  display:flex; gap:6px; align-items:center; padding:10px 12px;
+  background:#111; color:#fff; border-radius:10px; box-shadow:0 6px 20px rgba(0,0,0,.3);
+  font-size:.9rem;
+}
+.sg-privacy-toast__card a{ color:#fff; text-decoration:underline; }
+.sg-privacy-toast__close{
+  margin-left:auto; border:0; background:transparent; color:#fff; font-size:1.1rem; cursor:pointer;
+}
+/* Respect your existing sticky footer: add bottom spacing if needed */
+@media (max-width:480px){
+  #sg-privacy-fab{ bottom:56px; }      /* lift if you have a bottom bar */
+  #sg-privacy-toast{ bottom:120px; }   /* lift toast above bars */
+}
+/* === SG Privacy/Data Notice (END) === */
+
   </style>
 </head>
 
