--- a/order/index.html
+++ b/order/index.html
@@ -221,11 +221,9 @@
       </div>
 
       <div class="card muted">
-        <p>
-          💬 Need help?
-          <a href="howto.html" id="howtoOrder">How to Order</a>
-          or message us on Facebook / call
-          <a href="tel:0535680539">053 568 0539</a>.
+         <p style="margin-top:6px; font-size:0.88rem; color:#666;">
+           <a href="/privacy-policy.html">Privacy Policy</a> • 
+          <a href="/data-deletion.html">Data Deletion</a>
         </p>
       </div>
     </aside>
@@ -609,5 +607,11 @@
     };
   })();
   </script>
+  <footer style="text-align:center; padding:16px; font-size:0.9em; color:#555; background:#f9f9f9; margin-top:24px;">
+  © 2025 Stone Grill Restaurant • 
+  <a href="/privacy-policy.html">Privacy Policy</a> • 
+  <a href="/data-deletion.html">Data Deletion</a>
+</footer>
+
 </body>
 </html>
